--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -122,7 +122,8 @@
  */
 .site-footer {
     border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+    //padding: $spacing-unit / 10 0;
+    padding: 10 0;
 }
 
 .footer-heading {
